--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation group: 'com.sun.mail', name: 'jakarta.mail', version: '2.0.1'
     implementation 'org.springframework.boot:spring-boot-starter-quartz'
     implementation 'net.coobird:thumbnailator:0.4.8'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+    implementation 'io.swagger:swagger-annotations:1.6.2'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.mysql:mysql-connector-j'
